# Resume_Screener_Basic

./: .gitignore  Combine_datasets.py  Dockerfile  FastAPI_Resume.py  README.md  RSB_streamlitApp.py  Resume Screening with Python.ipynb  download_model.py  k8s-deployment.yaml  k8s-hpa.yaml  k8s-service.yaml  main.py  ocr_service.py  pyproject.toml  requirements.txt  test_ocr.py  tfidf.pkl  utils.py
.devcontainer/: devcontainer.json
Old_Pickles/: tfidf.pkl
logs/extracted_text/: 00387ea0c3656bda_png_20260130_224548.txt  004b71eceea4efe6_png_20260130_222808.txt  006ca03b4fdfbf9d_webp_20260130_224718.txt  00a2920feed0537e_png_20260130_231626.txt  00b43a8970245cbf_jpg_20260130_232008.txt  00b95950738bf490_jpg_20260130_225447.txt  00b9ec6495f13225_gif_20260130_232009.txt  00bbd5a3c3d6ee3d_webp_20260130_224548.txt  00bd3d6f4fd4fe21_jpg_20260130_224550.txt  00c879a464787a2f_png_20260130_224200.txt  00e87d97d2f01d89_webp_20260130_221937.txt  00f6209656da6738_png_20260130_224029.txt  010513ddbbf4705d_png_20260130_231515.txt  0105fe7531043609_png_20260130_224721.txt  011280f5a040bf28_png_20260130_230448.txt  013d10c0e1346b4a_jpg_20260130_224854.txt  016283be686e7523_png_20260130_224352.txt  01888170110d1ccf_png_20260130_223046.txt  01946c56a6f1a9d5_png_20260130_223049.txt  019ab4fe38644cf7_png_20260130_230022.txt  01bbe10e9499781e_jpg_20260130_222625.txt  01ce0225ed1ef29d_png_20260130_231628.txt  01ed595ac1ec3d01_jpg_20260130_232318.txt  0208bced325792f0_jpg_20260130_222626.txt  02331b699f355135_jpg_20260130_231516.txt  02360cb4211fb44a_png_20260130_231629.txt  (+8897 more)
(+8680 files in other folders)
