[project]
name = "resume-screener-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.128.0",
    "ollama>=0.6.1",
    "pandas>=3.0.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]
